--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -23,3 +23,8 @@ jobs:
       with:
         name: my-artifact
         path: /home/runner/work/javaworld/javaworld/target/External-IP-Checker-1.0.2-jar-with-dependencies.jar
+     - name: Super-linter
+       uses: super-linter/super-linter@v6.4.0  # x-release-please-version
+       env:
+          # To report GitHub Actions status checks
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
