--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,9 +9,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    - name: Formating 
+      uses: axel-op/googlejavaformat-action@v3
+      with:
+        args: "--skip-sorting-imports --replace"
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '11'
         distribution: 'temurin'
@@ -23,8 +27,9 @@ jobs:
       with:
         name: my-artifact
         path: /home/runner/work/javaworld/javaworld/target/External-IP-Checker-1.0.2-jar-with-dependencies.jar
-    - name: Super-linter
-      uses: super-linter/super-linter@v6.4.0  # x-release-please-version
+    #- name: Super-linter
+    #  uses: super-linter/super-linter@v6.4.0  # x-release-please-version
       # env:
           # To report GitHub Actions status checks
        # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       
