--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Formating 
-      uses: axel-op/googlejavaformat-action@v3
-      with:
-        args: "--skip-sorting-imports --replace"
+    #- name: Formating 
+     # uses: axel-op/googlejavaformat-action@v3
+     # with:
+     #   args: "--skip-sorting-imports --replace"
     - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
