--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,30 +9,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0 # required for github-action-get-previous-tag
-
     - name: Get Previous tag
       id: previoustag
       uses: 'WyriHaximus/github-action-get-previous-tag@v1'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        
+          
     - name: Get next version
       id: next
       uses: 'WyriHaximus/github-action-next-release-version@1.0.0'
       with:
-        version: ${{ steps.previoustag.outputs.tag }}
+          version: ${{ steps.previoustag.outputs.tag }}
 
     - name: Create release
       id: create_release_id
       uses: actions/create-release@v1
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ steps.next.outputs.version }}
-        release_name: Release ${{ steps.next.outputs.version }}
-
-    - uses: actions/checkout@v4
+          tag_name: ${{ steps.next.outputs.version }}
+          release_name: Release ${{ steps.next.outputs.version }}
+    
     #- name: Formating 
      # uses: axel-op/googlejavaformat-action@v3
      # with:
