--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,11 +12,24 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0 # required for github-action-get-previous-tag
-    - name: Get Previous tag
+    - name: 'Get Previous tag'
       id: previoustag
-      uses: 'WyriHaximus/github-action-get-previous-tag@v1'
+      uses: "WyriHaximus/github-action-get-previous-tag@v1"
+      with:
+          fallback: 1.0.0 # Optional fallback tag to use when no tag can be found
+          #workingDirectory: another/path/where/a/git/repo/is/checked/out # Optional alternative working directory
+    - name: 'Get next minor version'
+      id: semvers
+      uses: "WyriHaximus/github-action-next-semvers@v1"
+      with:
+          version: ${{ steps.previoustag.outputs.tag }}
+    - name: 'Create new milestone'
+      id: createmilestone
+      uses: "WyriHaximus/github-action-create-milestone@v1"
+      with:
+          title: ${{ steps.semvers.outputs.patch }}
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           
     - name: Get next version
       id: next
