--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,39 +12,39 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0 # required for github-action-get-previous-tag
-    - name: 'Get Previous tag'
-      id: previoustag
-      uses: "WyriHaximus/github-action-get-previous-tag@v1"
-      with:
-          fallback: 1.0.0 # Optional fallback tag to use when no tag can be found
+   ### - name: 'Get Previous tag'
+     # id: previoustag
+     # uses: "WyriHaximus/github-action-get-previous-tag@v1"
+     # with:
+     #     fallback: 1.0.0 # Optional fallback tag to use when no tag can be found
           #workingDirectory: another/path/where/a/git/repo/is/checked/out # Optional alternative working directory
-    - name: 'Get next minor version'
-      id: semvers
-      uses: "WyriHaximus/github-action-next-semvers@v1"
-      with:
-          version: ${{ steps.previoustag.outputs.tag }}
-    - name: 'Create new milestone'
-      id: createmilestone
-      uses: "WyriHaximus/github-action-create-milestone@v1"
-      with:
-          title: ${{ steps.semvers.outputs.patch }}
-      env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+    #- name: 'Get next minor version'
+    #  id: semvers
+    #  uses: "WyriHaximus/github-action-next-semvers@v1"
+    #  with:
+    #      version: ${{ steps.previoustag.outputs.tag }}
+    #- name: 'Create new milestone'
+    #  id: createmilestone
+    #  uses: "WyriHaximus/github-action-create-milestone@v1"
+    #  with:
+    #      title: ${{ steps.semvers.outputs.patch }}
+    #  env:
+    #      GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           
-    - name: Get next version
-      id: next
-      uses: 'WyriHaximus/github-action-next-release-version@1.0.0'
-      with:
-          version: ${{ steps.previoustag.outputs.tag }}
+    #- name: Get next version
+    #  id: next
+    #  uses: 'WyriHaximus/github-action-next-release-version@1.0.0'
+    #  with:
+    #      version: ${{ steps.previoustag.outputs.tag }}
 
-    - name: Create release
-      id: create_release_id
-      uses: actions/create-release@v1
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-          tag_name: ${{ steps.next.outputs.version }}
-          release_name: Release ${{ steps.next.outputs.version }}
+    #- name: Create release
+    #  id: create_release_id
+    #  uses: actions/create-release@v1
+    #  env:
+    #      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #  with:
+    #      tag_name: ${{ steps.next.outputs.version }}
+    #      release_name: Release ${{ steps.next.outputs.version }}
     
     #- name: Formating 
      # uses: axel-op/googlejavaformat-action@v3
@@ -63,7 +63,8 @@ jobs:
       #queries: +security-and-quality,octo-org/python-qlpack/show_ifs.ql@main
       #packs: +scope/pack1,scope/pack2@1.2.3,scope/pack3@4.5.6:path/to/queries
     - name: Build with maven
-      run: mvn -B package --file pom.xml
+     # run: mvn -B versions:set package --file pom.xml
+     run: mvn -B versions:set -DnewVersion=${{ github.event.release.tag_name }} -DgenerateBackupPoms=false
     - name: upload resulting file
       uses: actions/upload-artifact@v4
       with:
