--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -63,8 +63,7 @@ jobs:
       #queries: +security-and-quality,octo-org/python-qlpack/show_ifs.ql@main
       #packs: +scope/pack1,scope/pack2@1.2.3,scope/pack3@4.5.6:path/to/queries
     - name: Build with maven
-     # run: mvn -B versions:set package --file pom.xml
-     run: mvn -B versions:set -DnewVersion=${{ github.event.release.tag_name }} -DgenerateBackupPoms=false
+      run: mvn -B versions:set package --file pom.xml
     - name: upload resulting file
       uses: actions/upload-artifact@v4
       with:
