--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -68,7 +68,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: my-artifact
-        path: /home/runner/work/javaworld/javaworld/target/External-IP-Checker-1.0.2-jar-with-dependencies.jar
+        path: /home/runner/work/javaworld/javaworld/target/External-IP-Chec*.jar
     #- name: Super-linter
     #  uses: super-linter/super-linter@v6.4.0  # x-release-please-version
       # env:
