--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,10 +12,12 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0 # required for github-action-get-previous-tag
-   ### - name: 'Get Previous tag'
-     # id: previoustag
-     # uses: "WyriHaximus/github-action-get-previous-tag@v1"
-     # with:
+    - name: 'Get Previous tag'
+      id: previoustag
+      uses: "WyriHaximus/github-action-get-previous-tag@v1"
+      env:
+        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      # with:
      #     fallback: 1.0.0 # Optional fallback tag to use when no tag can be found
           #workingDirectory: another/path/where/a/git/repo/is/checked/out # Optional alternative working directory
     #- name: 'Get next minor version'
@@ -56,12 +58,6 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    #- name: Scan security 
-    #- uses: github/codeql-action/init@v3
-      #with:
-      #config-file: ./.github/codeql/codeql-config.yml
-      #queries: +security-and-quality,octo-org/python-qlpack/show_ifs.ql@main
-      #packs: +scope/pack1,scope/pack2@1.2.3,scope/pack3@4.5.6:path/to/queries
     - name: Build with maven
       run: mvn -B versions:set -DnewVersion=77
     - name: upload resulting file
@@ -74,10 +70,5 @@ jobs:
       # env:
           # To report GitHub Actions status checks
        # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Scan secturity
-      uses: github/codeql-action/analyze@v1
-      with:
-        languages: java
-        queries: 'security-and-quality'
-        github_token: ${{ secrets.GITHUB_TOKEN }}    
+ 
        
