--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,6 +15,7 @@ jobs:
     - name: 'Get Previous tag'
       id: previoustag
       uses: "WyriHaximus/github-action-get-previous-tag@v1"
+      prfix: "v"
       env:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
