--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,9 +15,9 @@ jobs:
     - name: 'Get Previous tag'
       id: previoustag
       uses: "WyriHaximus/github-action-get-previous-tag@v1"
-      prfix: "v"
       env:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        prefix: "v"
 
     - name: Set up JDK 11
       uses: actions/setup-java@v4
