--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -37,7 +37,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with maven
-      run: mvn -B versions:set -DnewVersion=77
+      run: mvn -B versions:set -DnewVersion=${{ steps.semvers.outputs.patch }} && mvn -B clean install
     - name: upload resulting file
       uses: actions/upload-artifact@v4
       with:
