--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,23 +12,23 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0 # required for github-action-get-previous-tag
-    - name: 'Get Previous tag'
-      id: previoustag
-      uses: "WyriHaximus/github-action-get-previous-tag@v1"
-      with:
-        fallback: 1.0.0
-    - name: 'Get next minor version'
-      id: semvers
-      uses: "WyriHaximus/github-action-next-semvers@v1"
-      with:
-        version: ${{ steps.previoustag.outputs.tag }}
-    - name: 'Create new milestone'
-      id: createmilestone
-      uses: "WyriHaximus/github-action-create-milestone@v1"
-      with:
-          title: ${{ steps.semvers.outputs.patch }}
-      env:
-        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+   # - name: 'Get Previous tag'
+    #  id: previoustag
+    #  uses: "WyriHaximus/github-action-get-previous-tag@v1"
+    #  with:
+    #    fallback: 1.0.0
+    #- name: 'Get next minor version'
+    #  id: semvers
+    ##  uses: "WyriHaximus/github-action-next-semvers@v1"
+     # with:
+      #  version: ${{ steps.previoustag.outputs.tag }}
+    #- name: 'Create new milestone'
+    #  id: createmilestone
+    #  uses: "WyriHaximus/github-action-create-milestone@v1"
+    #  with:
+     #     title: ${{ steps.semvers.outputs.patch }}
+     # env:
+     #   GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
     - name: Set up JDK 11
       uses: actions/setup-java@v4
@@ -41,7 +41,7 @@ jobs:
     - name: upload resulting file
       uses: actions/upload-artifact@v4
       with:
-        name: my-artifact
+        name: Calc
         path: /home/runner/work/javaworld/javaworld/target/*
   
  
